--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,11 +33,12 @@ dependencies:
     sdk: flutter
   dots_indicator: ^2.0.0
   get: ^4.6.5
-
+  persistent_bottom_nav_bar: ^5.0.2
+  shared_preferences: ^2.0.15
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-
+  intl: ^0.18.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
