--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   intl: ^0.18.0
+  google_maps_flutter: ^2.2.3
+  geocoding: ^2.0.5
+  geolocator: ^9.0.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -70,6 +74,7 @@ flutter:
     - assets/image/download.png
     - assets/image/logo_fb.png
     - assets/image/logo_gg.png
+    - assets/image/map_picker.png
   fonts:
     - family: Roboto
       fonts:
@@ -81,6 +86,7 @@ flutter:
           weight: 700
         - asset: assets/font/Roboto-Black.ttf
           weight: 900
+
 
   #   - family: Trajan Pro
   #     fonts:
