--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   google_maps_flutter: ^2.2.3
   geocoding: ^2.0.5
   geolocator: ^9.0.2
+  webview_flutter: ^4.0.2
+  flutter_zalopay_sdk: ^0.1.13
 
 dev_dependencies:
   flutter_test:
@@ -75,6 +77,9 @@ flutter:
     - assets/image/logo_fb.png
     - assets/image/logo_gg.png
     - assets/image/map_picker.png
+    - assets/image/ship_cod.jpg
+    - assets/image/zalo_pay.png
+    - assets/image/gg_map.png
   fonts:
     - family: Roboto
       fonts:
