--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.food_delivery_app">
-   <application
-        android:label="food_delivery_app"
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
+    <application
+        android:label="Gz Food"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
        <meta-data
@@ -9,9 +12,10 @@
            android:value="AIzaSyAx4ShtCwVk8_WDBBt_wzGcDJar-lFynJQ" />
 
        <activity
+
             android:name=".MainActivity"
             android:exported="true"
-            android:launchMode="singleTop"
+            android:launchMode="singleTask"
             android:theme="@style/LaunchTheme"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
             android:hardwareAccelerated="true"
@@ -28,6 +32,23 @@
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+           <intent-filter>
+               <action android:name="android.intent.action.VIEW" />
+               <category android:name="android.intent.category.DEFAULT" />
+               <category android:name="android.intent.category.BROWSABLE" />
+               <data android:scheme="demozpdk"
+                   android:host="app" />
+           </intent-filter>
+
+           <meta-data
+               android:name="com.vng.zalo.sdk.APP_ID"
+               android:value="2553" />
+           <meta-data
+               android:name="com.vng.zalo.sdk.URI_SCHEME"
+               android:value="demozpdk://app" />
+           <meta-data
+               android:name="com.vng.zalo.sdk.ENVIRONMENT"
+               android:value="SANDBOX" />
         </activity>
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
