--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -13,7 +13,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>food_delivery_app</string>
+	<string>Gz Food</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -40,6 +40,35 @@
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
+	</array>
+    <key>CFBundleURLTypes</key>
+    <array>
+    	<dict>
+    		<key>CFBundleTypeRole</key>
+    		<string>Editor</string>
+    		<key>CFBundleURLName</key>
+    		<string>com.flutterzalopay.flutterZaloSdkExample</string>
+   			<key>CFBundleURLSchemes</key>
+   			<array>
+   				<string>demozpdk</string>
+   			</array>
+   			    		</dict>
+    		<dict>
+    		<key>CFBundleTypeRole</key>
+    		<string>Editor</string>
+   			<key>CFBundleURLName</key>
+  			<string>com.flutterzalopay.flutterZaloSdkExample</string>
+   			<key>CFBundleURLSchemes</key>
+   			<array>
+    			<string>zp-redirect-2553</string>
+   			</array>
+    		</dict>
+    	</array>
+    <key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>zalo</string>
+		<string>zalopay</string>
+		<string>zalopay.api.v2</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
